[package]
name = "sts" # shader-toy-slang
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[build-dependencies]
glob = "*"
anyhow = "*"

[dependencies]
ash = "*"
log = "*"
anyhow = "*"
regex = "*"
flexi_logger = {version = "*", features = ["async"]}
indoc = "*"
clap = { version = "*", features = ["derive", "wrap_help"]}
notify-debouncer-full = "*"
argfile = "*"
ctrlc = "*"

[dependencies.glfw]
version = "*"
features = ["vulkan"]

[dependencies.textwrap]
features = ["terminal_size"]
version = "*"
