[package]
name = "sts" # shader-toy-slang
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[build-dependencies]
anyhow = "1.0.93"
glob = "0.3.1"

[dependencies]
anyhow = "1.0.93"
ash = "0.38.0"
clap = { version="4.5.21", features = ["derive", "wrap_help"]}
bon = "3.0.0"
demo_vk = { git = "https://github.com/creative-coding-the-hard-way/demo-vk" }
glfw = { version="0.58.0", features = ["vulkan"] }

